dev: initial commit of Win Client for HTTP/2 Testing

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -23,3 +23,24 @@ a {
 .subtitle {
     color: gray;
 }
+
+.hidden {
+    display: none;
+}
+
+#url {
+    display: inline-block;
+    width: 260px;
+    margin-right: 20px;
+}
+
+#start, #stop {
+    width: 70px;
+    padding: auto 20px;
+    vertical-align: top;
+}
+
+#progress {
+    margin: 20px 0;
+    height: 28px;
+}
